src/test/deca/context/invalid/pierre/objects/callNotAMethod.deca
class A {
    int a;
    void b() {}
}
{
    A a = new A();
    a.a();
}